--- a/nav2_costmap_2d/CMakeLists.txt
+++ b/nav2_costmap_2d/CMakeLists.txt
@@ -23,6 +23,7 @@ find_package(visualization_msgs REQUIRED)
 find_package(tf2_ros REQUIRED)
 find_package(tf2 REQUIRED)
 find_package(tf2_geometry_msgs REQUIRED)
+find_package(tf2_sensor_msgs REQUIRED)
 find_package(xmlrpcpp REQUIRED)
 find_package(laser_geometry REQUIRED)
 find_package(pluginlib REQUIRED)
@@ -30,13 +31,11 @@ find_package(message_filters REQUIRED)
 find_package(nav2_util REQUIRED)
 
 # TODO(bpwilcox): port remaining packages
-#find_package(tf2_sensor_msgs REQUIRED)
 #find_package(dynamic_reconfigure REQUIRED)
 #find_package(voxel_grid REQUIRED)
 
 remove_definitions(-DDISABLE_LIBUSB-1.0)
 find_package(Eigen3 REQUIRED)
-#find_package(Boost REQUIRED COMPONENTS system thread)
 
 include_directories(
   include
@@ -63,8 +62,7 @@ add_library(nav2_costmap_2d SHARED
   src/costmap_math.cpp
   src/footprint.cpp
   src/costmap_layer.cpp
-  #	TODO(bpwilcox): need tf2_sensor_msgs ported
-  # src/observation_buffer.cpp
+  src/observation_buffer.cpp
 )
 
 set(dependencies
@@ -77,6 +75,7 @@ set(dependencies
   xmlrpcpp
   pluginlib
   tf2_geometry_msgs
+  tf2_sensor_msgs
   message_filters
   nav2_util
 )
@@ -87,12 +86,12 @@ ament_target_dependencies(nav2_costmap_2d
 
 add_library(layers SHARED
   plugins/inflation_layer.cpp
-
-  # TODO(bpwilcox): port additional plugin layers
   plugins/static_layer.cpp
   #plugins/obstacle_layer.cpp
+  src/observation_buffer.cpp
+
+  # TODO(bpwilcox): port additional plugin layers
   #plugins/voxel_layer.cpp
-  #src/observation_buffer.cpp
 )
 ament_target_dependencies(layers
   ${dependencies}
