--- a/nav2_bringup/launch/nav2_params.yaml
+++ b/nav2_bringup/launch/nav2_params.yaml
@@ -149,8 +149,8 @@ lifecycle_manager:
     use_sim_time: True
     autostart: True
     node_names: ['map_server', 'amcl',
-                 'world_model', 'dwb_controller',
-                 'navfn_planner', 'bt_navigator']
+                 'dwb_controller', 'navfn_planner',
+                 'bt_navigator']
 
 lifecycle_manager_service_client:
   ros__parameters:
@@ -171,9 +171,5 @@ navfn_planner_GetCostmap_client:
     use_sim_time: True
 
 robot_state_publisher:
-  ros__parameters:
-    use_sim_time: True
-
-world_model:
   ros__parameters:
     use_sim_time: True
