--- a/nav2_bringup/bringup/params/nav2_params.yaml
+++ b/nav2_bringup/bringup/params/nav2_params.yaml
@@ -74,8 +74,8 @@ controller_server:
   ros__parameters:
     use_sim_time: True
     controller_frequency: 20.0
-    controller_plugin_types: ["dwb_core::DWBLocalPlanner"]
-    controller_plugin_ids: ["FollowPath"]
+    controller_plugin_types: ["teb_local_planner::TebLocalPlannerROS", "dwb_core::DWBLocalPlanner"]
+    controller_plugin_ids: ["DynamicFollowPath", "FollowPath"]
     min_x_velocity_threshold: 0.001
     min_y_velocity_threshold: 0.5
     min_theta_velocity_threshold: 0.001
@@ -113,6 +113,26 @@ controller_server:
     FollowPath.PathDist.scale: 3.0
     FollowPath.GoalDist.scale: 4.0
     FollowPath.RotateToGoal.scale: 2.0
+    DynamicFollowPath.footprint_model.type: circular
+    DynamicFollowPath.footprint_model.radius: 0.17
+    DynamicFollowPath.min_obstacle_dist: 0.1
+    DynamicFollowPath.inflation_dist: 0.1
+    DynamicFollowPath.costmap_converter_plugin: costmap_converter::CostmapToPolygonsDBSMCCH
+    DynamicFollowPath.costmap_converter_spin_thread: True
+    DynamicFollowPath.costmap_converter_rate: 15
+    DynamicFollowPath.enable_homotopy_class_planning: True
+    DynamicFollowPath.enable_multithreading: True
+    #DynamicFollowPath.weight_obstacle: 100.0
+    DynamicFollowPath.optimization_verbose: False
+    DynamicFollowPath.teb_autoresize: True
+    DynamicFollowPath.min_samples: 3
+    DynamicFollowPath.max_samples: 20
+    DynamicFollowPath.max_global_plan_lookahead_dist: 1.0
+    DynamicFollowPath.visualize_hc_graph: True
+    DynamicFollowPath.max_vel_x: 0.26
+    DynamicFollowPath.max_vel_theta: 1.0
+    DynamicFollowPath.acc_lim_x: 2.5
+    DynamicFollowPath.acc_lim_theta: 3.2
 
 controller_server_rclcpp_node:
   ros__parameters:
