--- a/nav2_bringup/bringup/params/nav2_params.yaml
+++ b/nav2_bringup/bringup/params/nav2_params.yaml
@@ -75,8 +75,8 @@ controller_server:
   ros__parameters:
     use_sim_time: True
     controller_frequency: 20.0
-    controller_plugin_types: ["teb_local_planner::TebLocalPlannerROS", "dwb_core::DWBLocalPlanner"]
-    controller_plugin_ids: ["DynamicFollowPath", "FollowPath"]
+    controller_plugin_types: ["dwb_core::DWBLocalPlanner", "teb_local_planner::TebLocalPlannerROS"]
+    controller_plugin_ids: ["FollowPath", "DynamicFollowPath"]
     min_x_velocity_threshold: 0.001
     min_y_velocity_threshold: 0.5
     min_theta_velocity_threshold: 0.001
