--- a/smac_planner/CMakeLists.txt
+++ b/smac_planner/CMakeLists.txt
@@ -52,6 +52,8 @@ set(dependencies
 add_library(${library_name} SHARED
   src/a_star.cpp
   src/smac_planner.cpp
+  src/node_se2.cpp
+  src/node_2d.cpp
 )
 
 ament_target_dependencies(${library_name}
@@ -82,5 +84,5 @@ endif()
 
 ament_export_include_directories(include)
 ament_export_libraries(${library_name})
-ament_export_dependencies(${dependencies} Eigen3)
+ament_export_dependencies(${dependencies})
 ament_package()
