--- a/nav2_bringup/bringup/params/nav2_params.yaml
+++ b/nav2_bringup/bringup/params/nav2_params.yaml
@@ -268,6 +268,9 @@ planner_server:
       change_penalty: 0.20              # For SE2 node: penalty to apply if motion is changing directions, must be >= 0
       non_straight_penalty: 1.10        # For SE2 node: penalty to apply if motion is non-straight, must be => 1
       cost_penalty: 1.3                 # For SE2 node: penalty to apply to higher cost zones
+      analytic_expansion_ratio: 2.0     # For SE2 node: planner will attempt an analytic path expansion every N iterations
+                                        # where N = closest_distance_to_goal / analytic_expansion_ratio
+                                        # Higher ratios result in more frequent expansions
 
       smoother:
         smoother:
